# mindweave

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  index.html  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  test_stream.py
grader/: agent.py  emotion.py  intent.py
server/: __init__.py  app.py  environment.py  environment2.py  grader.py  main_ui.py  models_ui.py  router.py
server/baseline/: baseline_agent.py
server/core/: model_store.py
server/emotions/: embedding_detector.py  emotion_mapper.py
server/evaluation/: compare_outputs.py  plot_results.py  run_baseline.py  run_mindweave.py
server/evaluator/: grader.py
server/llm/: llm_handler.py
server/rl/: ppo_model.py  state_encoder.py  train_ppo.py
server/training/: generate_data.py
